# shadowfs

./: .clippy.toml  .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  contributing.md  platform-guide.md
examples/: basic-mount.rs  override-files.rs  performance-test.rs
scripts/: check.ps1  check.sh  release.sh  setup-dev.ps1  setup-dev.sh  verify.sh
shadowfs-cli/: Cargo.toml
shadowfs-cli/src/: main.rs
shadowfs-core/: Cargo.toml  backup.json
shadowfs-core/src/: error.rs  lib.rs  override_store.rs  stats.rs  traits.rs  types.rs
shadowfs-core/src/override_store/: api.rs  directory.rs  entry.rs  lru.rs  memory.rs  mod.rs  optimization.rs  patterns.rs  persistence.rs  size.rs  stats.rs
shadowfs-core/src/platform/: capability_test.rs  cli.rs  compatibility.rs  detector.rs  install_helper.rs  linux_detector.rs  macos_detector.rs  mod.rs  runtime_detection.rs  windows_detector.rs
shadowfs-core/src/platform/install/: interactive.rs  linux.rs  macos.rs  mod.rs  types.rs  windows.rs
shadowfs-core/src/platform/runtime/: detector.rs  detector_common.rs  detector_linux.rs  detector_macos.rs  detector_windows.rs  fallback.rs  mod.rs  monitor.rs  types.rs
shadowfs-core/src/types/: config.rs  directory.rs  error.rs  metadata.rs  mod.rs  mount.rs  operations.rs  path.rs
shadowfs-ffi/: Cargo.toml
shadowfs-ffi/src/: lib.rs
shadowfs-linux/: Cargo.toml
shadowfs-macos/: Cargo.toml
shadowfs-macos/src/: fskit.rs  lib.rs
shadowfs-macos/src/fskit/: async_runtime.rs  bindings.rs  file_locking.rs  file_ops.rs  finder_integration.rs  macos_xattr.rs  mount.rs  operations.rs  provider.rs  security.rs  volume.rs  xattr.rs  xattr_cache.rs  xattr_ops.rs
shadowfs-windows/: Cargo.toml
shadowfs-windows/src/: error.rs  lib.rs  override_store.rs  stats.rs
shadowfs-windows/src/projfs/: async_bridge.rs  callbacks.rs  futures.rs  mod.rs  performance.rs  provider.rs  virtualization.rs
