[workspace]
resolver = "2"
members = [
    "shadowfs-core",
    "shadowfs-windows",
    "shadowfs-macos",
    "shadowfs-linux",
    "shadowfs-ffi",
    "shadowfs-cli",
]

[workspace.package]
version = "0.1.0"
authors = ["ShadowFS Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/aslitaser/shadowfs"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.7"