[workspace]
resolver = "2"
members = [
    "shadowfs-core",
    "shadowfs-windows",
    "shadowfs-macos",
    "shadowfs-linux",
    "shadowfs-ffi",
    "shadowfs-cli",
]

[workspace.package]
version = "0.1.0"
authors = ["aslitaser <aslitaser@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/aslitaser/shadowfs"
homepage = "https://github.com/aslitaser/shadowfs"
readme = "README.md"
keywords = ["filesystem", "virtual", "fuse", "projfs", "fskit"]
categories = ["filesystem", "os", "development-tools"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Logging and errors
tracing = "0.1.40"
thiserror = "1.0.63"
anyhow = "1.0.86"

# Serialization
serde = { version = "1.0.204", features = ["derive"] }
bytes = "1.7.1"

# Async trait
async-trait = "0.1.81"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
strip = true

# Profile for filesystem operations - balance between speed and debuggability
[profile.fs-bench]
inherits = "release"
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = "thin"
codegen-units = 16

# Profile for development with optimizations
[profile.dev-opt]
inherits = "dev"
opt-level = 2