[package]
name = "shadowfs-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "shadowfs_core"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
bytes.workspace = true
thiserror.workspace = true
uuid = { version = "1.10", features = ["v4", "serde"] }
tokio = { workspace = true, features = ["sync"] }
dashmap = "6.1"