[package]
name = "shadowfs-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "shadowfs_core"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
bytes = { workspace = true, features = ["serde"] }
thiserror.workspace = true
serde.workspace = true
uuid = { version = "1.10", features = ["v4", "serde"] }
tokio = { workspace = true, features = ["sync", "fs", "io-util"] }
dashmap = "6.1"
indexmap = "2.6"
sha2 = "0.10"
blake3 = "1.5"
lru = "0.12"
bincode = "1.3"
zstd = "0.13"
crc32fast = "1.4"
regex = "1.11"
serde_json = "1.0"
rmp-serde = "1.3"
num_cpus = "1.16"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_Storage_ProjectedFileSystem"
] }
winapi = { version = "0.3", features = ["securitybaseapi", "winnt", "processthreadsapi"] }
winreg = "0.52"

[dev-dependencies]
tempfile = "3.8"