[package]
name = "shadowfs-ffi"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "shadowfs_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
shadowfs-core = { path = "../shadowfs-core" }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true

[build-dependencies]
cbindgen = "0.29"