[package]
name = "shadowfs-linux"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fuser = "0.13"
libc = "0.2"
shadowfs-core = { path = "../shadowfs-core" }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true