[package]
name = "shadowfs-macos"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
objc = "0.2"
objc2 = "0.5"
objc2-foundation = "0.3"
block2 = "0.5"
core-foundation = "0.9"
shadowfs-core = { path = "../shadowfs-core" }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
libc = "0.2"
errno = "0.3"